# ComfyUI-SDXL-Adherence

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  __init__.py  pyproject.toml
.github/workflows/: publish_action.yml
docs/: AlignHintsToLatent.md  AutoSize64.md  CropByBBox.md  NegativePromptHelper.md  PostPolish.md  SDXLDualClipEncode.md  SDXLPromptStyler.md  SmartLatent.md
example_workflows/: ComfyUI-SDXL-Adherence_basic_text_only.json  ComfyUI-SDXL-Adherence_dual_controlnet_canny_depth.json  ComfyUI-SDXL-Adherence_example.json  ComfyUI-SDXL-Adherence_img2img_with_bbox_crop.json
js/: ComfyUI_SDXL_Adherence.js
nodes/: __init__.py  align_hints_to_latent.py  auto_size_64.py  crop_by_bbox.py  dual_clip_encode.py  ksampler_adherence.py  negative_prompt_helper.py  post_polish.py  prompt_styler.py  smart_latent.py
src/: comfyui_sdxl_adherence.py
