# pyproject.tom
[project]
name = "ComfyUI_SDXL_Adherence"
authors = ["Regi Ellis"]
description = ""
version = "1.0.0"

license = {text = ""}
dependencies  = [""]
[project.urls]
Repository = ""

[tool.comfy]
PublisherId = ""
DisplayName = ""
Icon = ""

# Formatting & linting config
[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E203", "E501"]
