# pyproject.toml
[project]
name = "ComfyUI_SDXL_Adherence"
version = "1.0.0"
description = "ComfyUI nodes that improve SDXL prompt adherence and any-size/tiled VAE workflows."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Regi Ellis" }]
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Homepage = "https://github.com/regiellis/ComfyUI-SDXL-Adherence"
Repository = "https://github.com/regiellis/ComfyUI-SDXL-Adherence.git"
Issues = "https://github.com/regiellis/ComfyUI-SDXL-Adherence/issues"

[tool.comfy]
PublisherId = "itsjustregi"
DisplayName = "ComfyUI SDXL Adherence"
Icon = "" 

# Formatting & linting config
[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E203", "E501"]
