# pyproject.toml
[project]
name = "sdxl-adherence"
version = "1.0.1"
description = "ComfyUI nodes that improve SDXL prompt adherence and any-size/tiled VAE workflows."
authors = [{ name = "Regi Ellis" }]
license = { file = "LICENSE" }
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Repository = "https://github.com/regiellis/ComfyUI-SDXL-Adherence"

[tool.comfy]
PublisherId = "itsjustregi"
DisplayName = "SDXL Adherence"
Icon = ""

# Formatting & linting config
[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E203", "E501"]
